2.5
Standard Errors for the L Moment estimates for the GPD type

2.4
L Moment estimation for the GPD type

2.3.3 
print.starship, summary.starship and plot.starship now display 
estimation method and gld type

2.3
Moment estimation for FKML type
qdgl function deprecated in favour of dqgl as it calculates the density quantile function of the gld

2.2
New estimation methods for the FKML parameterisation:
Numerical MLE, Maximum Spacings Product, Titteringtons, L Moments,
TL Moments, Distributional Least Absolutes
Starship has C speedups from Ben Dean, in fit.fkml function