@@ -1,6 +1,6 @@
 Package: gld
 Version: 2.4.9
-Date: 2016-12-01
+Date: 2017-06-01
 Title: Estimation and Use of the Generalised (Tukey) Lambda Distribution
 Suggests: 
 Imports: stats, graphics, e1071, lmom
